# Adafruit_CircuitPython_Register_SPI

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  setup.py
adafruit_register_spi/: spi_bit.py  spi_bits.py
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: register_spi_simpletest.py
